Add target to tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,9 @@
     "compilerOptions": {
         "sourceMap": true,
         "module": "es6",
-        "outDir": "./dist",
-        "noImplicitAny": true
+        "outDir": "./dist/",
+        "noImplicitAny": true,
+        "target": "es2017",
     },
     "exclude": [
         "./node_modules",
