--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
         "outDir": "./dist/",
         "noImplicitAny": true,
         "target": "es2017",
+        "allowJs": true,
     },
     "include": [
         "./src/**/*"
