--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
         "noImplicitAny": true,
         "target": "es2017",
         "allowJs": true,
+        "types": [],
     },
     "include": [
         "./src/**/*"
